# two-tower-amazon-recommender

./: .envrc  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  activate_dev.sh  check_environment.sh  dev_commands.txt  environment_status.md  pyproject.toml  requirements-dev.txt  requirements.txt  validate_minimal.py  vscode_setup.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
configs/: data_config.yaml
configs/logging/: logging.yaml
docs/: Makefile  conf.py  index.md  index.rst
scripts/data_processing/: download_data.py  download_efficient.py  download_kcore_data.py  download_subset.py  explore_data.py  prepare_training_data.py
src/: __init__.py
src/data/: __init__.py  amazon_loader.py  base.py  preprocessor.py
src/evaluation/: __init__.py
src/features/: __init__.py
src/models/: __init__.py  basic_two_tower.py  builder.py  config.py  simple_two_tower.py  two_tower.py
src/serving/: __init__.py
src/training/: __init__.py
tests/: __init__.py
tests/unit/: test_amazon_loader.py  test_base.py  test_placeholder.py  test_preprocessor.py  test_two_tower_model.py
